[fix] fix toaster message alignment, change alerts variants to info

--- a/src/scripts/components/_ui/toaster/toaster.scss
+++ b/src/scripts/components/_ui/toaster/toaster.scss
@@ -32,6 +32,7 @@
   display: flex;
   flex: 1 1 auto;
   flex-flow: row nowrap;
+  align-items: center;
 }
 
 .message-icon {
